--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/topNewsFragment"
-        android:title="Top News"
+        android:title="@string/top_news"
         android:icon="@drawable/ic_top_news"/>
     <item android:id="@+id/savedNewsFragment"
-        android:title="Saved News"
+        android:title="@string/saved_news"
         android:icon="@drawable/ic_favorite"/>
     <item android:id="@+id/searchNewsFragment"
-        android:title="Search News"
+        android:title="@string/search_news"
         android:icon="@drawable/ic_search_news"/>
 
 </menu>
